lib/stratiform/res/test/stratiform/corpus/pos/schema-with-sigil.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name custom-sigil-schema
sigil @

document
  field name String
