lib/stratiform/res/test/stratiform/corpus/neg/_contact-schema.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

# A minimal contact schema, used as the schema for sibling
# contact-document-* tests in this directory. Only the bits needed for
# the negative tests are included.

name contact-schema

document
  field name String
  field email String
